# Gpt-repro-

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
autoresearch/: README.md  prepare.py  program.md  report-2026-04-21.md  report-nanochat-lessons.md  results.tsv  train.py
configs/: debug.py  gpt2_124m.py  gpt2_124m_fp8.py  gpt2_124m_modern.py  gpt2_124m_modernplus.py  gpt2_124m_modernplus_looped.py  gpt2_124m_modernplus_mla.py  gpt2_124m_modernplus_muon_mup.py  gpt2_124m_muon.py  gpt2_124m_speedpack.py  gpt2_350m.py
experiments/: README.md  RETROSPECTIVE.md  TEMPLATE.md  perf-util-probe.md
experiments/00-baseline/: report.md
experiments/01-modern-block/: report.md
experiments/02-muon/: report.md
experiments/03-modded-tricks/: report.md
experiments/04-fp8/: report.md
experiments/05-speed-pack/: report.md
experiments/06-muon-mup/: report.md
experiments/10-mla/: report.md
experiments/11-loopllm/: report.md
experiments/14-sft-matrix/: matrix.json  report.md
experiments/15-rl-matrix/: master_matrix.json  master_matrix.md  report.md
scripts/: eval_zero_shot.py  extract_config_diffs.py  gen_eval.py  make_report_plots.py  prepare_fineweb_edu.py  prepare_openwebtext.py  render_diagrams.sh  rl.py  rl_matrix_report.py  run_rl_matrix.sh  run_sft_matrix.sh  sft.py  sft_eval.py  sft_matrix_report.py  train.py
tests/: test_checkpoint_load.py  test_data_loader.py  test_fp8.py  test_gen_eval.py  test_grpo.py  test_hf_weight_load.py  test_model_shapes.py  test_muon.py  test_mup_plumbing.py  test_sft_harness.py  test_speed_pack.py
(+29 files in other folders)
