[project]
name = "gpt-repro"
version = "0.1.0"
description = "Faithful GPT-2 124M reproduction on a single RTX 5090, with a roadmap of modern training improvements."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.7.1",
    "tiktoken>=0.8.0",
    "datasets>=3.0.0",
    "huggingface_hub>=0.24.0",
    "numpy>=2.0",
    "tqdm>=4.66",
    "transformers>=4.44",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]
flash = ["flash-attn==2.8.0.post2"]
kernels = ["kernels>=0.2"]
wandb = ["wandb>=0.17"]
fp8 = ["transformer-engine>=1.13"]
eval = ["lm-eval>=0.4.5"]

[tool.uv]
# Use the PyTorch CUDA 12.8 wheel index; required for SM_120 (RTX 5090).
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gpt_repro"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]
ignore = ["E501"]
